parser.output
   0  $accept : %entry% $end

   1  program : stmt_list EOF

   2  stmt_list :
   3            | stmt stmt_list
   4            | NEWLINE stmt stmt_list

   5  stmt : vdecl NEWLINE
   6       | expr NEWLINE
   7       | function_stmt
   8       | return_stmt NEWLINE
   9       | print_stmt NEWLINE
  10       | if_stmt
  11       | while_stmt
  12       | for_stmt
  13       | BREAK NEWLINE
  14       | CONTINUE NEWLINE

  15  block : NEWLINE INDENT stmt_list DEDENT

  16  function_stmt : DEF ID LPAREN formals_opt RPAREN ARROW typ COLON block

  17  vdecl : ID COLON typ

  18  formals_opt :
  19              | formals_list

  20  formals_list : vdecl
  21               | vdecl COMMA formals_list

  22  return_stmt : RETURN expr

  23  if_stmt : IF expr COLON block

  24  while_stmt : WHILE expr COLON block

  25  for_stmt : FOR ID IN expr COLON block

  26  print_stmt : PRINT LPAREN expr RPAREN

  27  expr_opt :
  28           | expr_list

  29  expr_list : expr
  30            | expr COMMA expr_list

  31  expr : INT_LITERAL
  32       | FLOAT_LITERAL
  33       | STRING_LITERAL
  34       | BOOL_LITERAL
  35       | LBRACKET expr_opt RBRACKET
  36       | LPAREN expr_opt RPAREN
  37       | expr PLUS expr
  38       | expr MINUS expr
  39       | expr TIMES expr
  40       | expr DIVIDE expr
  41       | expr MODULO expr
  42       | expr EXP expr
  43       | expr FDIVIDE expr
  44       | ID
  45       | ID ASSIGN expr
  46       | ID PLUS_ASSIGN expr
  47       | ID MINUS_ASSIGN expr
  48       | ID TIMES_ASSIGN expr
  49       | ID DIV_ASSIGN expr
  50       | ID MOD_ASSIGN expr
  51       | ID EXP_ASSIGN expr
  52       | ID FDIV_ASSIGN expr
  53       | ID LPAREN args_opt RPAREN
  54       | expr EQ expr
  55       | expr NEQ expr
  56       | expr GT expr
  57       | expr LT expr
  58       | expr GEQ expr
  59       | expr LEQ expr
  60       | expr AND expr
  61       | expr OR expr
  62       | NOT expr
  63       | expr IN expr
  64       | expr NOT IN expr

  65  typ : INT
  66      | BOOL
  67      | FLOAT
  68      | STRING

  69  args_opt :
  70           | args_list

  71  args_list : expr
  72            | expr COMMA args_list

  73  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (73)
	stmt_list : .  (2)

	NEWLINE  shift 3
	DEF  shift 4
	RETURN  shift 5
	PRINT  shift 6
	LPAREN  shift 7
	LBRACKET  shift 8
	IF  shift 9
	WHILE  shift 10
	FOR  shift 11
	BREAK  shift 12
	CONTINUE  shift 13
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 18
	BOOL_LITERAL  shift 19
	EOF  reduce 2

	program  goto 20
	stmt_list  goto 21
	stmt  goto 22
	vdecl  goto 23
	expr  goto 24
	function_stmt  goto 25
	return_stmt  goto 26
	print_stmt  goto 27
	if_stmt  goto 28
	while_stmt  goto 29
	for_stmt  goto 30


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	stmt_list : NEWLINE . stmt stmt_list  (4)

	DEF  shift 4
	RETURN  shift 5
	PRINT  shift 6
	LPAREN  shift 7
	LBRACKET  shift 8
	IF  shift 9
	WHILE  shift 10
	FOR  shift 11
	BREAK  shift 12
	CONTINUE  shift 13
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 18
	BOOL_LITERAL  shift 19
	.  error

	stmt  goto 31
	vdecl  goto 23
	expr  goto 24
	function_stmt  goto 25
	return_stmt  goto 26
	print_stmt  goto 27
	if_stmt  goto 28
	while_stmt  goto 29
	for_stmt  goto 30


state 4
	function_stmt : DEF . ID LPAREN formals_opt RPAREN ARROW typ COLON block  (16)

	ID  shift 32
	.  error


state 5
	return_stmt : RETURN . expr  (22)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 34


state 6
	print_stmt : PRINT . LPAREN expr RPAREN  (26)

	LPAREN  shift 35
	.  error


state 7
	expr : LPAREN . expr_opt RPAREN  (36)
	expr_opt : .  (27)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	RPAREN  reduce 27

	expr  goto 36
	expr_opt  goto 37
	expr_list  goto 38


state 8
	expr : LBRACKET . expr_opt RBRACKET  (35)
	expr_opt : .  (27)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	RBRACKET  reduce 27

	expr  goto 36
	expr_opt  goto 39
	expr_list  goto 38


state 9
	if_stmt : IF . expr COLON block  (23)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 40


state 10
	while_stmt : WHILE . expr COLON block  (24)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 41


state 11
	for_stmt : FOR . ID IN expr COLON block  (25)

	ID  shift 42
	.  error


state 12
	stmt : BREAK . NEWLINE  (13)

	NEWLINE  shift 43
	.  error


state 13
	stmt : CONTINUE . NEWLINE  (14)

	NEWLINE  shift 44
	.  error


state 14
	expr : NOT . expr  (62)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 45


state 15
	expr : INT_LITERAL .  (31)

	.  reduce 31


state 16
	expr : FLOAT_LITERAL .  (32)

	.  reduce 32


state 17
	expr : STRING_LITERAL .  (33)

	.  reduce 33


state 18
	vdecl : ID . COLON typ  (17)
	expr : ID .  (44)
	expr : ID . ASSIGN expr  (45)
	expr : ID . PLUS_ASSIGN expr  (46)
	expr : ID . MINUS_ASSIGN expr  (47)
	expr : ID . TIMES_ASSIGN expr  (48)
	expr : ID . DIV_ASSIGN expr  (49)
	expr : ID . MOD_ASSIGN expr  (50)
	expr : ID . EXP_ASSIGN expr  (51)
	expr : ID . FDIV_ASSIGN expr  (52)
	expr : ID . LPAREN args_opt RPAREN  (53)

	COLON  shift 46
	LPAREN  shift 47
	ASSIGN  shift 48
	PLUS_ASSIGN  shift 49
	MINUS_ASSIGN  shift 50
	TIMES_ASSIGN  shift 51
	DIV_ASSIGN  shift 52
	MOD_ASSIGN  shift 53
	EXP_ASSIGN  shift 54
	FDIV_ASSIGN  shift 55
	NEWLINE  reduce 44
	IN  reduce 44
	PLUS  reduce 44
	MINUS  reduce 44
	TIMES  reduce 44
	DIVIDE  reduce 44
	MODULO  reduce 44
	EXP  reduce 44
	FDIVIDE  reduce 44
	EQ  reduce 44
	NEQ  reduce 44
	GT  reduce 44
	LT  reduce 44
	GEQ  reduce 44
	LEQ  reduce 44
	AND  reduce 44
	OR  reduce 44
	NOT  reduce 44


state 19
	expr : BOOL_LITERAL .  (34)

	.  reduce 34


state 20
	%entry% : '\001' program .  (73)

	.  reduce 73


state 21
	program : stmt_list . EOF  (1)

	EOF  shift 56
	.  error


state 22
	stmt_list : stmt . stmt_list  (3)
	stmt_list : .  (2)

	NEWLINE  shift 3
	DEF  shift 4
	RETURN  shift 5
	PRINT  shift 6
	LPAREN  shift 7
	LBRACKET  shift 8
	IF  shift 9
	WHILE  shift 10
	FOR  shift 11
	BREAK  shift 12
	CONTINUE  shift 13
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 18
	BOOL_LITERAL  shift 19
	DEDENT  reduce 2
	EOF  reduce 2

	stmt_list  goto 57
	stmt  goto 22
	vdecl  goto 23
	expr  goto 24
	function_stmt  goto 25
	return_stmt  goto 26
	print_stmt  goto 27
	if_stmt  goto 28
	while_stmt  goto 29
	for_stmt  goto 30


state 23
	stmt : vdecl . NEWLINE  (5)

	NEWLINE  shift 58
	.  error


state 24
	stmt : expr . NEWLINE  (6)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MODULO expr  (41)
	expr : expr . EXP expr  (42)
	expr : expr . FDIVIDE expr  (43)
	expr : expr . EQ expr  (54)
	expr : expr . NEQ expr  (55)
	expr : expr . GT expr  (56)
	expr : expr . LT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . IN expr  (63)
	expr : expr . NOT IN expr  (64)

	NEWLINE  shift 59
	IN  shift 60
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	MODULO  shift 65
	EXP  shift 66
	FDIVIDE  shift 67
	EQ  shift 68
	NEQ  shift 69
	GT  shift 70
	LT  shift 71
	GEQ  shift 72
	LEQ  shift 73
	AND  shift 74
	OR  shift 75
	NOT  shift 76
	.  error


state 25
	stmt : function_stmt .  (7)

	.  reduce 7


state 26
	stmt : return_stmt . NEWLINE  (8)

	NEWLINE  shift 77
	.  error


state 27
	stmt : print_stmt . NEWLINE  (9)

	NEWLINE  shift 78
	.  error


state 28
	stmt : if_stmt .  (10)

	.  reduce 10


state 29
	stmt : while_stmt .  (11)

	.  reduce 11


state 30
	stmt : for_stmt .  (12)

	.  reduce 12


state 31
	stmt_list : NEWLINE stmt . stmt_list  (4)
	stmt_list : .  (2)

	NEWLINE  shift 3
	DEF  shift 4
	RETURN  shift 5
	PRINT  shift 6
	LPAREN  shift 7
	LBRACKET  shift 8
	IF  shift 9
	WHILE  shift 10
	FOR  shift 11
	BREAK  shift 12
	CONTINUE  shift 13
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 18
	BOOL_LITERAL  shift 19
	DEDENT  reduce 2
	EOF  reduce 2

	stmt_list  goto 79
	stmt  goto 22
	vdecl  goto 23
	expr  goto 24
	function_stmt  goto 25
	return_stmt  goto 26
	print_stmt  goto 27
	if_stmt  goto 28
	while_stmt  goto 29
	for_stmt  goto 30


state 32
	function_stmt : DEF ID . LPAREN formals_opt RPAREN ARROW typ COLON block  (16)

	LPAREN  shift 80
	.  error


state 33
	expr : ID .  (44)
	expr : ID . ASSIGN expr  (45)
	expr : ID . PLUS_ASSIGN expr  (46)
	expr : ID . MINUS_ASSIGN expr  (47)
	expr : ID . TIMES_ASSIGN expr  (48)
	expr : ID . DIV_ASSIGN expr  (49)
	expr : ID . MOD_ASSIGN expr  (50)
	expr : ID . EXP_ASSIGN expr  (51)
	expr : ID . FDIV_ASSIGN expr  (52)
	expr : ID . LPAREN args_opt RPAREN  (53)

	LPAREN  shift 47
	ASSIGN  shift 48
	PLUS_ASSIGN  shift 49
	MINUS_ASSIGN  shift 50
	TIMES_ASSIGN  shift 51
	DIV_ASSIGN  shift 52
	MOD_ASSIGN  shift 53
	EXP_ASSIGN  shift 54
	FDIV_ASSIGN  shift 55
	COMMA  reduce 44
	COLON  reduce 44
	NEWLINE  reduce 44
	RPAREN  reduce 44
	RBRACKET  reduce 44
	IN  reduce 44
	PLUS  reduce 44
	MINUS  reduce 44
	TIMES  reduce 44
	DIVIDE  reduce 44
	MODULO  reduce 44
	EXP  reduce 44
	FDIVIDE  reduce 44
	EQ  reduce 44
	NEQ  reduce 44
	GT  reduce 44
	LT  reduce 44
	GEQ  reduce 44
	LEQ  reduce 44
	AND  reduce 44
	OR  reduce 44
	NOT  reduce 44


state 34
	return_stmt : RETURN expr .  (22)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MODULO expr  (41)
	expr : expr . EXP expr  (42)
	expr : expr . FDIVIDE expr  (43)
	expr : expr . EQ expr  (54)
	expr : expr . NEQ expr  (55)
	expr : expr . GT expr  (56)
	expr : expr . LT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . IN expr  (63)
	expr : expr . NOT IN expr  (64)

	IN  shift 60
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	MODULO  shift 65
	EXP  shift 66
	FDIVIDE  shift 67
	EQ  shift 68
	NEQ  shift 69
	GT  shift 70
	LT  shift 71
	GEQ  shift 72
	LEQ  shift 73
	AND  shift 74
	OR  shift 75
	NOT  shift 76
	NEWLINE  reduce 22


state 35
	print_stmt : PRINT LPAREN . expr RPAREN  (26)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 81


state 36
	expr_list : expr .  (29)
	expr_list : expr . COMMA expr_list  (30)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MODULO expr  (41)
	expr : expr . EXP expr  (42)
	expr : expr . FDIVIDE expr  (43)
	expr : expr . EQ expr  (54)
	expr : expr . NEQ expr  (55)
	expr : expr . GT expr  (56)
	expr : expr . LT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . IN expr  (63)
	expr : expr . NOT IN expr  (64)

	COMMA  shift 82
	IN  shift 60
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	MODULO  shift 65
	EXP  shift 66
	FDIVIDE  shift 67
	EQ  shift 68
	NEQ  shift 69
	GT  shift 70
	LT  shift 71
	GEQ  shift 72
	LEQ  shift 73
	AND  shift 74
	OR  shift 75
	NOT  shift 76
	RPAREN  reduce 29
	RBRACKET  reduce 29


state 37
	expr : LPAREN expr_opt . RPAREN  (36)

	RPAREN  shift 83
	.  error


state 38
	expr_opt : expr_list .  (28)

	.  reduce 28


state 39
	expr : LBRACKET expr_opt . RBRACKET  (35)

	RBRACKET  shift 84
	.  error


state 40
	if_stmt : IF expr . COLON block  (23)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MODULO expr  (41)
	expr : expr . EXP expr  (42)
	expr : expr . FDIVIDE expr  (43)
	expr : expr . EQ expr  (54)
	expr : expr . NEQ expr  (55)
	expr : expr . GT expr  (56)
	expr : expr . LT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . IN expr  (63)
	expr : expr . NOT IN expr  (64)

	COLON  shift 85
	IN  shift 60
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	MODULO  shift 65
	EXP  shift 66
	FDIVIDE  shift 67
	EQ  shift 68
	NEQ  shift 69
	GT  shift 70
	LT  shift 71
	GEQ  shift 72
	LEQ  shift 73
	AND  shift 74
	OR  shift 75
	NOT  shift 76
	.  error


state 41
	while_stmt : WHILE expr . COLON block  (24)
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MODULO expr  (41)
	expr : expr . EXP expr  (42)
	expr : expr . FDIVIDE expr  (43)
	expr : expr . EQ expr  (54)
	expr : expr . NEQ expr  (55)
	expr : expr . GT expr  (56)
	expr : expr . LT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : expr . IN expr  (63)
	expr : expr . NOT IN expr  (64)

	COLON  shift 86
	IN  shift 60
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	MODULO  shift 65
	EXP  shift 66
	FDIVIDE  shift 67
	EQ  shift 68
	NEQ  shift 69
	GT  shift 70
	LT  shift 71
	GEQ  shift 72
	LEQ  shift 73
	AND  shift 74
	OR  shift 75
	NOT  shift 76
	.  error


state 42
	for_stmt : FOR ID . IN expr COLON block  (25)

	IN  shift 87
	.  error


state 43
	stmt : BREAK NEWLINE .  (13)

	.  reduce 13


state 44
	stmt : CONTINUE NEWLINE .  (14)

	.  reduce 14


state 45
	expr : expr . PLUS expr  (37)
	expr : expr . MINUS expr  (38)
	expr : expr . TIMES expr  (39)
	expr : expr . DIVIDE expr  (40)
	expr : expr . MODULO expr  (41)
	expr : expr . EXP expr  (42)
	expr : expr . FDIVIDE expr  (43)
	expr : expr . EQ expr  (54)
	expr : expr . NEQ expr  (55)
	expr : expr . GT expr  (56)
	expr : expr . LT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . AND expr  (60)
	expr : expr . OR expr  (61)
	expr : NOT expr .  (62)
	expr : expr . IN expr  (63)
	expr : expr . NOT IN expr  (64)

	IN  shift 60
	PLUS  shift 61
	MINUS  shift 62
	TIMES  shift 63
	DIVIDE  shift 64
	MODULO  shift 65
	EXP  shift 66
	FDIVIDE  shift 67
	EQ  shift 68
	NEQ  shift 69
	GT  shift 70
	LT  shift 71
	GEQ  shift 72
	LEQ  shift 73
	COMMA  reduce 62
	COLON  reduce 62
	NEWLINE  reduce 62
	RPAREN  reduce 62
	RBRACKET  reduce 62
	AND  reduce 62
	OR  reduce 62
	NOT  reduce 62


state 46
	vdecl : ID COLON . typ  (17)

	INT  shift 88
	BOOL  shift 89
	FLOAT  shift 90
	STRING  shift 91
	.  error

	typ  goto 92


state 47
	expr : ID LPAREN . args_opt RPAREN  (53)
	args_opt : .  (69)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	RPAREN  reduce 69

	expr  goto 93
	args_opt  goto 94
	args_list  goto 95


state 48
	expr : ID ASSIGN . expr  (45)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 96


state 49
	expr : ID PLUS_ASSIGN . expr  (46)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 97


state 50
	expr : ID MINUS_ASSIGN . expr  (47)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 98


state 51
	expr : ID TIMES_ASSIGN . expr  (48)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 99


state 52
	expr : ID DIV_ASSIGN . expr  (49)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 100


state 53
	expr : ID MOD_ASSIGN . expr  (50)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 101


state 54
	expr : ID EXP_ASSIGN . expr  (51)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 102


state 55
	expr : ID FDIV_ASSIGN . expr  (52)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 103


state 56
	program : stmt_list EOF .  (1)

	.  reduce 1


state 57
	stmt_list : stmt stmt_list .  (3)

	.  reduce 3


state 58
	stmt : vdecl NEWLINE .  (5)

	.  reduce 5


state 59
	stmt : expr NEWLINE .  (6)

	.  reduce 6


state 60
	expr : expr IN . expr  (63)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 104


state 61
	expr : expr PLUS . expr  (37)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 105


state 62
	expr : expr MINUS . expr  (38)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 106


state 63
	expr : expr TIMES . expr  (39)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 107


state 64
	expr : expr DIVIDE . expr  (40)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 108


state 65
	expr : expr MODULO . expr  (41)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 109


state 66
	expr : expr EXP . expr  (42)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 110


state 67
	expr : expr FDIVIDE . expr  (43)

	LPAREN  shift 7
	LBRACKET  shift 8
	NOT  shift 14
	INT_LITERAL  shift 15
	FLOAT_LITERAL  shift 16
	STRING_LITERAL  shift 17
	ID  shift 33
	BOOL_LITERAL  shift 19
	.  error

	expr  goto 111


state 68
	expr : expr EQ . expr  (54)
